Added gnutls_verify_stored_pubkey() and gnutls_store_pubkey(). This enables using ssh-like authentication for TLS sessions.

--- a/configure.ac
+++ b/configure.ac
@@ -117,9 +117,8 @@ AC_C_BIGENDIAN
 
 
 dnl No fork on MinGW, disable some self-tests until we fix them.
-AC_CHECK_FUNCS(fork,,)
+AC_CHECK_FUNCS([fork getrusage getpwuid_r],,)
 AM_CONDITIONAL(HAVE_FORK, test "$ac_cv_func_fork" != "no")
-AC_CHECK_FUNCS(getrusage,,)
 AC_LIB_HAVE_LINKFLAGS(pthread,, [#include <pthread.h>], [pthread_mutex_lock (0);])
 
 dnl Check for p11-kit
