--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -26,29 +26,29 @@ if ENABLE_SRP
 dist_man_MANS += srptool.1
 endif
 
-certtool.1: ../../src/certtool-args.def.in
-	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl ../../src/certtool-args.def
+certtool.1: ../../src/certtool-args.def
+	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
 
-ocsptool.1: ../../src/ocsptool-args.def.in
-	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl ../../src/ocsptool-args.def
+ocsptool.1: ../../src/ocsptool-args.def
+	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
 
-gnutls-cli.1: ../../src/cli-args.def.in
-	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl ../../src/cli-args.def
+gnutls-cli.1: ../../src/cli-args.def
+	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
 
-gnutls-serv.1: ../../src/serv-args.def.in
-	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl ../../src/serv-args.def
+gnutls-serv.1: ../../src/serv-args.def
+	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
 
-gnutls-cli-debug.1: ../../src/cli-debug-args.def.in
-	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl ../../src/cli-debug-args.def
+gnutls-cli-debug.1: ../../src/cli-debug-args.def
+	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
 
-srptool.1: ../../src/srptool-args.def.in
-	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl ../../src/srptool-args.def
+srptool.1: ../../src/srptool-args.def
+	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
 
-p11tool.1: ../../src/p11tool-args.def.in
-	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl ../../src/p11tool-args.def
+p11tool.1: ../../src/p11tool-args.def
+	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
 
-psktool.1: ../../src/psk-args.def.in
-	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl ../../src/psk-args.def
+psktool.1: ../../src/psk-args.def
+	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
 
 APIMANS =
 APIMANS += gnutls_pubkey_init.3
