--- a/src/cli-args.def.in
+++ b/src/cli-args.def.in
@@ -323,6 +323,12 @@ TLS_ECDHE_RSA_AES_256_GCM_SHA384                  0xc0, 0x30	TLS1.2
 TLS_DHE_RSA_AES_256_CBC_SHA256                    0x00, 0x6b	TLS1.2
 TLS_DHE_DSS_AES_256_CBC_SHA256                    0x00, 0x6a	TLS1.2
 TLS_RSA_AES_256_CBC_SHA256                        0x00, 0x3d	TLS1.2
+
+Certificate types: CTYPE-X.509
+Protocols: VERS-TLS1.2, VERS-TLS1.1, VERS-TLS1.0, VERS-SSL3.0, VERS-DTLS1.0
+Compression: COMP-NULL
+Elliptic curves: CURVE-SECP384R1, CURVE-SECP521R1
+PK-signatures: SIGN-RSA-SHA384, SIGN-ECDSA-SHA384, SIGN-RSA-SHA512, SIGN-ECDSA-SHA512
 @end example
 _EOF_;
 };
