more files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -440,6 +440,7 @@ po/quot.sed
 po/remove-potcdate.sed
 po/remove-potcdate.sin
 po/stamp-po
+src/invoke-*.menu
 src/Makefile
 src/Makefile.in
 src/benchmark
