--- a/src/cli-args.def.in
+++ b/src/cli-args.def.in
@@ -294,6 +294,7 @@ doc-section = {
   ds-type = 'EXAMPLES';
   ds-format = 'texi';
   ds-text   = <<-_EOF_
+@subheading Connecting using PSK authentication
 To connect to a server using PSK authentication, you need to enable the choice of PSK by using a cipher priority parameter such as in the example below. 
 @example
 $ ./gnutls-cli -p 5556 localhost --pskusername psk_identity \
@@ -313,16 +314,17 @@ Connecting to '127.0.0.1:5556'...
 @end example
 By keeping the --pskusername parameter and removing the --pskkey parameter, it will query only for the password during the handshake. 
 
+@subheading Listing ciphersuites in a priority string
 To list the ciphersuites in a priority string:
 @example
 $ ./gnutls-cli --priority SECURE192 -l
 Cipher suites for SECURE192
-TLS_ECDHE_ECDSA_AES_256_CBC_SHA384                0xc0, 0x24	TLS1.2
-TLS_ECDHE_ECDSA_AES_256_GCM_SHA384                0xc0, 0x2e	TLS1.2
-TLS_ECDHE_RSA_AES_256_GCM_SHA384                  0xc0, 0x30	TLS1.2
-TLS_DHE_RSA_AES_256_CBC_SHA256                    0x00, 0x6b	TLS1.2
-TLS_DHE_DSS_AES_256_CBC_SHA256                    0x00, 0x6a	TLS1.2
-TLS_RSA_AES_256_CBC_SHA256                        0x00, 0x3d	TLS1.2
+TLS_ECDHE_ECDSA_AES_256_CBC_SHA384         0xc0, 0x24	TLS1.2
+TLS_ECDHE_ECDSA_AES_256_GCM_SHA384         0xc0, 0x2e	TLS1.2
+TLS_ECDHE_RSA_AES_256_GCM_SHA384           0xc0, 0x30	TLS1.2
+TLS_DHE_RSA_AES_256_CBC_SHA256             0x00, 0x6b	TLS1.2
+TLS_DHE_DSS_AES_256_CBC_SHA256             0x00, 0x6a	TLS1.2
+TLS_RSA_AES_256_CBC_SHA256                 0x00, 0x3d	TLS1.2
 
 Certificate types: CTYPE-X.509
 Protocols: VERS-TLS1.2, VERS-TLS1.1, VERS-TLS1.0, VERS-SSL3.0, VERS-DTLS1.0
