--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -26,29 +26,51 @@ if ENABLE_SRP
 dist_man_MANS += srptool.1
 endif
 
+# Note that our .def files depend on autogen
+# supporting the @subheading texi keyword. This
+# is not currently the case so we do remove it
+# before processing. Once the new version of autogen
+# is out, replace the sed and tmp files with a simple
+# autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
 certtool.1: ../../src/certtool-args.def
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
+	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	rm -f "$<".tmp
 
 ocsptool.1: ../../src/ocsptool-args.def
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
+	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	rm -f "$<".tmp
 
 gnutls-cli.1: ../../src/cli-args.def
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
+	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	rm -f "$<".tmp
 
 gnutls-serv.1: ../../src/serv-args.def
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
+	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	rm -f "$<".tmp
 
 gnutls-cli-debug.1: ../../src/cli-debug-args.def
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
+	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	rm -f "$<".tmp
 
 srptool.1: ../../src/srptool-args.def
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
+	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	rm -f "$<".tmp
 
 p11tool.1: ../../src/p11tool-args.def
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
+	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	rm -f "$<".tmp
 
 psktool.1: ../../src/psk-args.def
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
+	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	rm -f "$<".tmp
 
 APIMANS =
 APIMANS += gnutls_pubkey_init.3
