replacing the version is not enough. Regenerate all files depending on .dep on dist-hook.

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,3 +42,13 @@ dist-hook:
 	make ChangeLog
 	cp -f ChangeLog $(distdir)/
 	sed 's/\@VERSION\@/$(VERSION)/g' -i $(distdir)/src/*.def
+	cd $(distdir)/src/ && for i in *.def;do \
+		autogen $$i; \
+		autogen -Tagtexi-cmd.tpl $$i; \
+		cp $$i $$i.tmp; \
+		sed -i 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $$i.tmp; \
+		autogen -Tagman-cmd.tpl $$i.tmp; \
+		rm -f $$i.tmp; \
+		mv -f *.1 ../doc/manpages/; \
+		mv -f *.texi ../doc/manpages; \
+	done
