--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -33,43 +33,43 @@ endif
 # is out, replace the sed and tmp files with a simple
 # autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
 certtool.1: ../../src/certtool-args.def
-	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	-sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp && \
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp && \
 	rm -f "$<".tmp
 
 ocsptool.1: ../../src/ocsptool-args.def
-	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	-sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp && \
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp && \
 	rm -f "$<".tmp
 
 gnutls-cli.1: ../../src/cli-args.def
-	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	-sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp && \
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp && \
 	rm -f "$<".tmp
 
 gnutls-serv.1: ../../src/serv-args.def
-	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	-sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp && \
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp && \
 	rm -f "$<".tmp
 
 gnutls-cli-debug.1: ../../src/cli-debug-args.def
-	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	-sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp && \
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp && \
 	rm -f "$<".tmp
 
 srptool.1: ../../src/srptool-args.def
-	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	-sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp && \
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp && \
 	rm -f "$<".tmp
 
 p11tool.1: ../../src/p11tool-args.def
-	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	-sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp && \
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp && \
 	rm -f "$<".tmp
 
 psktool.1: ../../src/psk-args.def
-	sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp
-	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp
+	-sed 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $< > "$<".tmp && \
+	autogen -DMAN_SECTION=1 -Tagman-cmd.tpl "$<".tmp && \
 	rm -f "$<".tmp
 
 APIMANS =
