--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -411,6 +411,8 @@ APIMANS += gnutls_certificate_set_params_function.3
 APIMANS += gnutls_anon_set_params_function.3
 APIMANS += gnutls_psk_set_params_function.3
 APIMANS += gnutls_hex2bin.3
+APIMANS += gnutls_verify_stored_pubkey.3
+APIMANS += gnutls_store_pubkey.3
 APIMANS += gnutls_ocsp_req_init.3
 APIMANS += gnutls_ocsp_req_deinit.3
 APIMANS += gnutls_ocsp_req_import.3
