--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1656,14 +1656,37 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
   int gnutls_hex2bin (const char *hex_data, size_t hex_size,
                       void *bin_data, size_t * bin_size);
 
-  /* ssh style functions */
-  int gnutls_verify_stored_pubkey(const char* file, 
+  /* Trust on first use (or ssh like) functions */
+
+  /* stores the provided information to a database
+   */
+  typedef int (*gnutls_trust_db_store_func) (const char* db_name, 
+                                             const char* host,
+                                             const char* service,
+                                             time_t expiration,
+                                             const gnutls_datum_t* pubkey);
+  
+  /* searches for the provided host/service pair that match the
+   * provided public key in the database. */
+  typedef int (*gnutls_trust_db_retr_func) (const char* db_name, 
+                                            const char* host,
+                                            const char* service,
+                                            const gnutls_datum_t *pubkey);
+  
+  typedef struct {
+    gnutls_trust_db_store_func store;
+    gnutls_trust_db_retr_func retrieve;
+  } trust_storage_st;
+  
+  int gnutls_verify_stored_pubkey(const char* db_name, 
+                            const trust_storage_st * tdb,
                             const char* host,
                             const char* service,
                             gnutls_certificate_type_t cert_type,
                             const gnutls_datum_t * cert, unsigned int flags);
 
-  int gnutls_store_pubkey(const char* file, 
+  int gnutls_store_pubkey(const char* db_name,
+                    const trust_storage_st * tdb,
                     const char* host,
                     const char* service,
                     gnutls_certificate_type_t cert_type,
