added missing files

--- a/doc/examples/Makefile.am
+++ b/doc/examples/Makefile.am
@@ -78,4 +78,5 @@ endif
 
 libexamples_la_SOURCES = examples.h ex-alert.c ex-pkcs12.c \
 	ex-session-info.c ex-x509-info.c ex-verify.c	\
-	tcp.c udp.c ex-pkcs11-list.c verify.c ex-verify-ssh.c
+	tcp.c udp.c ex-pkcs11-list.c verify.c ex-verify-ssh.c \
+	ex-serv-dtls.c print-ciphersuites.c
